[metadata]
name = vlib
version = 2.0.2
author = David Link
author_email = dvlink@gmail.com
description = vlib core libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dlink/vlib
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: System :: Logging
    Topic :: System :: Shells
keywords = database, logging, config, orm, odict

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
